pkl-core/src/test/files/LanguageSnippetTests/input/errors/forGeneratorCannotGenerateProperties.pkl
res {
  for (n in List(1, 2, 3)) { foo = n }
}
